[gd_scene load_steps=9 format=3 uid="uid://cb2d8drfxcdqe"]

[ext_resource type="Script" uid="uid://duvib0msduhck" path="res://scripts/Selection_mode_menu.gd" id="1_ah60l"]
[ext_resource type="Texture2D" uid="uid://dxmyc4yt33l3b" path="res://assets/Background_Menu/meme-sheldon-cooper_.png" id="2_n28nh"]
[ext_resource type="AudioStream" uid="uid://b27y8uwjrvonh" path="res://assets/audio/sfx/menu/button_click.ogg" id="3_eqgue"]
[ext_resource type="AudioStream" uid="uid://yinuh86st0n" path="res://assets/audio/sfx/menu/mouse_entered.ogg" id="4_12ngo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6cm7"]

[sub_resource type="Animation" id="Animation_bqqt6"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-200, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ekxnf"]
resource_name = "reveal"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.004, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.288568, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1000, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu84c"]
_data = {
&"RESET": SubResource("Animation_bqqt6"),
&"reveal": SubResource("Animation_ekxnf")
}

[node name="Select_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ah60l")

[node name="background" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -19.9999
offset_right = 1300.0
offset_bottom = 720.0
texture = ExtResource("2_n28nh")
expand_mode = 2
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.42
anchor_bottom = 1.0
offset_left = -200.0
offset_right = -200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999997, 0.99)
theme_override_constants/margin_left = -20
theme_override_constants/margin_right = -20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="game_logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="sum" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Adição \"+\""

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="minus" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Subtração \"-\""

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="times" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Vezes \"X\""

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="div" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Divisão \"/\""

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="all" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Todos"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_l6cm7")

[node name="back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Voltar"

[node name="Animação" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wu84c")
}
autoplay = "reveal"

[node name="buttonclick" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource("3_eqgue")
volume_db = -20.0

[node name="mouse_entered" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_12ngo")
volume_db = -20.0

[node name="Musica2" type="CheckButton" parent="."]
offset_left = 910.0
offset_top = 477.0
offset_right = 1061.0
offset_bottom = 508.0
scale = Vector2(2.425, 2.425)
button_pressed = true
text = "Musica Menu"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/sum" to="." method="_on_sum_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/times" to="." method="_on_times_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/div" to="." method="_on_div_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/all" to="." method="_on_all_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Musica2" to="." method="_on_musica_2_toggled"]
